# 2019fa-pset-5-Jinphilcho

./: .travis.yml  Pipfile  setup.cfg  test_pset.py
pset_5/: __init__.py  tasks.py
