[options]
setup_requires =
    setuptools_scm

[tool:pytest]
# If a pytest section is found in one of the possible config files
# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
# so if you add a pytest config section elsewhere,
# you will need to delete this section from setup.cfg.
norecursedirs =
    migrations

filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
    --pyargs
    --cov=pset_5
    --cov-branch

testpaths =
    pset_5
    tests/

